--- a/index.html
+++ b/index.html
@@ -1,63 +1,96 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Valentine?</title>
   <style>
     body {
-      background: #ffe6f0;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      font-family: Arial, sans-serif;
+      font-family: 'Comic Sans MS', cursive;
+      overflow: hidden;
     }
+
     .box {
       background: white;
-      padding: 30px;
-      border-radius: 20px;
+      padding: 35px;
+      border-radius: 25px;
       text-align: center;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+      max-width: 350px;
     }
+
     h1 {
-      color: #ff4d6d;
+      color: #ff3366;
+      font-size: 26px;
+      margin-bottom: 25px;
     }
+
     button {
-      padding: 10px 20px;
-      margin: 10px;
       border: none;
-      border-radius: 10px;
-      font-size: 16px;
+      border-radius: 15px;
       cursor: pointer;
+      font-size: 18px;
+      padding: 12px 25px;
     }
+
     #yes {
-      background: #ff4d6d;
+      background: #ff3366;
       color: white;
+      font-size: 24px;
+      padding: 18px 40px;
+      transform: scale(1.2);
     }
+
     #no {
-      background: #ccc;
+      background: #bbb;
+      position: absolute;
+    }
+
+    #result {
+      margin-top: 20px;
+      font-size: 20px;
+    }
+
+    img {
+      width: 220px;
+      margin-top: 15px;
+      border-radius: 15px;
     }
   </style>
 </head>
 <body>
+
   <div class="box">
-    <h1>Will you be my Valentine? 💖</h1>
-    <button id="yes" onclick="yesClick()">Yes 💕</button>
-    <button id="no" onclick="moveNo()">No 🙃</button>
-    <p id="msg"></p>
+    <h1>Nithin can you be my Valentine?? 😳💖</h1>
+
+    <button id="yes" onclick="yesClick()">YES 💘</button>
+    <button id="no" onmouseover="runAway()">NO 🙃</button>
+
+    <div id="result"></div>
   </div>
 
   <script>
-    function yesClick() {
-      document.getElementById("msg").innerText =
-        "YAYYY 💘 I knew you'd say yes!";
+    function runAway() {
+      const noBtn = document.getElementById("no");
+      const x = Math.random() * (window.innerWidth - 100);
+      const y = Math.random() * (window.innerHeight - 50);
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
     }
-    function moveNo() {
-      const btn = document.getElementById("no");
-      btn.style.position = "absolute";
-      btn.style.top = Math.random() * window.innerHeight + "px";
-      btn.style.left = Math.random() * window.innerWidth + "px";
+
+    function yesClick() {
+      document.querySelector(".box").innerHTML = `
+        <h1>HAHA I KNEW IT 😏💖</h1>
+        <p>You’re officially my Valentine 💘😂</p>
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbGQ2eWJkZzVnYWl1cHpxM2Q0bW1tZ2l2b3Z2YzJ5ZzQ5aXJ5bSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/l0MYt5jPR6QX5pnqM/giphy.gif" />
+        <p>🥰🥰🥰</p>
+      `;
     }
   </script>
+
 </body>
 </html>
